<resources>
    <string name="app_name">Financial control</string>
    <string name="action_add_expense_revenue_title">Add</string>
    <string name="settings_activity_menu_title">Settings</string>
    <string name="savings_page_title">Savings</string>
    <string name="home_page_title">Home</string>
    <string name="graphics_page_title">Charts</string>
    <string name="lbl_expense">Expenses</string>
    <string name="lbl_incomes">Incomes</string>
    <string name="lbl_account_balance">Account balance</string>
    <string name="menu_main">Home</string>
    <string name="menu_savings">Savings</string>
    <string name="menu_charts">Charts</string>
    <string name="label_total">Total</string>
    <string name="et_values_hints">0.00</string>

    <string name="paid">Paid</string>
    <string name="unpaid">Unpaid</string>
    <string name="overdue">Overdue</string>
    <string name="pay">Pay</string>
    <string name="cancel_payment">Cancel</string>

    <!-- Toast Messages -->
    <string name="empty_required_field_toast_text">There is an empty required field</string>
    <string name="not_enough_money_toast_text">There is not enough money.</string>

    <!-- Shared Preferences -->
    <string name="objective_value_default">00.00</string>
    <string name="objective_description_default">None</string>

    <!-- Savings Fragment -->
    <string name="lbl_balance">Balance</string>
    <string name="lbl_deposits">Deposits</string>
    <string name="lbl_withdrawals">Withdrawals</string>

    <!-- menu add -->
    <string name="add_income">Add income</string>
    <string name="add_expense">Add expense</string>

    <!-- activity add income -->
    <string name="lbl_description">Description</string>
    <string name="lbl_value">Value</string>
    <string name="btn_change_date_txt">Change date</string>
    <string name="lbl_date">Date</string>
    <string name="lbl_recurrence">Recurrence</string>
    <string name="lbl_type">Type</string>
    <string name="btn_add_txt">Add</string>
    <string name="save_success_message">Saved successfully</string>
    <string name="save_failed_message">\"Save failed\" error</string>
    <string name="lbl_name">Name</string>
    <string name="edit_many_times_hint">2</string>
    <string name="edit_num_paid_installments">0</string>
    <string name="lbl_number">Number</string>
    <string name="lbl_every">Every</string>
    <string name="lbl_account_balance_year_months_chart">Monthly balance</string>
    <string name="number_field_is_empty">The Number field is empty</string>
    <string name="minimum_number_installments">The minimum number of installments is 2</string>

    <!-- Add expense -->
    <string name="lbl_paid">Paid</string>
    <string name="lbl_num_paid_installments">Number of paid installments</string>

    <!-- Chart Fragment -->
    <string name="lbl_expenses_type_month_pizza_chart">Expenses type</string>
    <string name="expenses_type_pie_chart_name">Expenses type</string>
    <string name="lbl_expenses_recurrence_month_pizza_chart">Recurrence of expenses</string>
    <string name="lbl_incomes_recurrence_month_pizza_chart">Recurrence of incomes</string>

    <!-- Savings Fragment -->
    <string name="lbl_savings">Savings</string>
    <string name="btn_deposit_txt">Deposit</string>
    <string name="btn_withdraw_txt">Withdraw</string>
    <string name="lbl_objective">Objective</string>
    <string name="lbl_objective_description">Description of the objective</string>

    <!-- DepositOrWithdraw Activity -->
    <string name="deposit_name">Savings Deposit</string>
    <string name="withdraw_name">Savings Withdrawal</string>

    <!-- Dialog Objective Value -->
    <string name="lbl_dialog_objective_value">Enter your objective value</string>
    <string name="dialog_value_hint">1200.00</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_confirm">Confirm</string>

    <!-- Dialog Objective Description -->
    <string name="lbl_dialog_objective_description">Enter your objective description</string>
    <string name="dialog_description_hint">Your description here</string>

    <!-- Settings Activity -->
    <string name="settings_title">Settings</string>
    <string name="email" translatable="false">pegadevelopmententerprise@gmail.com</string>
    <string name="use_favorite_colors">Use your favorite colors</string>

    <string name="lbl_incomes_color">Incomes</string>
    <string name="lbl_expenses_color">Expenses</string>
    <string name="lbl_balance_color">Balance</string>
    <string name="lbl_not_required_color">Not necessary</string>
    <string name="lbl_required_color">Necessary</string>
    <string name="investments_color">Investments</string>
    <string name="lbl_installment_expenses_color">Installment expenses</string>
    <string name="lbl_fixed_monthly_expenses_color">Fixed monthly expenses</string>
    <string name="lbl_installment_incomes_color">Installment incomes</string>
    <string name="lbl_fixed_monthly_incomes_color">Fixed monthly incomes</string>
    <string name="btn_default_colors">Default colors</string>

    <!-- Recycler View Item Menu -->
    <string name="edit_item_title_menu">Edit</string>
    <string name="delete_item_title_menu">Delete</string>
    <string name="delete_item_details_menu">Details</string>

    <!-- Confirm delete dialog -->
    <string name="confirm_delete_income_dialog_message">Are you sure you want to delete this income?</string>
    <string name="confirm_delete_income_dialog_positive_button">Delete</string>
    <string name="confirm_delete_income_dialog_neutral_button">Cancel</string>

    <string name="confirm_delete_expense_dialog_message">Are you sure you want to delete this expense?</string>
    <string name="confirm_delete_savings_dialog_message">Are you sure you want to delete?</string>

    <!-- Color Dialog -->
    <string name="color_dialog_title">Select Color</string>
    <string name="color_dialog_positive_button">Select</string>
    <string name="color_dialog_negative_button">Cancel</string>

    <!-- Details Dialog -->
    <string name="details_dialog_title">Details</string>
    <string name="txt_ok">Ok</string>
    <string name="month">month</string>
    <string name="months">months</string>

    <!-- Default Colors Dialog -->
    <string name="yes">Yes</string>
    <string name="confirm_set_default_colors">Are you sure you want to set the default colors?</string>

    <!-- Months Dialog -->
    <string name="months_dialog_title">Select a month</string>

    <!-- About Activity -->
    <string name="developed_by">Developed by</string>
    <string name="about_title">About</string>
    <string name="about_version">Version</string>
    <string name="about_licenses">Licenses</string>

    <!-- Licenses Dialog -->
    <string name="understand">Understand</string>
    <string name="lbl_mp_android_chart" translatable="false">MPAndroidChart</string>
    <string name="lbl_currency_edittext" translatable="false">Currency-Edittext</string>
    <string name="lbl_color_picker_view" translatable="false">ColorPickerView</string>

    <!-- Fixed Month cl -->
    <string name="lbl_start_date">Start date</string>
    <string name="lbl_end_date">End date</string>
    <string name="month_hint">Month</string>
    <string name="year_hint">Year</string>

    <string name="copyright_mp_android_chart" translatable="false">Copyright 2020 Philipp Jahoda\n
        Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License.
        You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0\nUnless required by applicable law or agreed
        to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF
        ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the
        License.</string>

    <string name="copyright_corrency_edittext" translatable="false">Copyright [2019] [AbhinayMe]\n
        Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License.
        You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0\nUnless required by applicable law or agreed
        to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF
        ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the
        License.</string>

    <string name="copyright_color_picker_view" translatable="false">Copyright 2017 skydoves (Jaewoong Eum)\n
        Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License.
        You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0\nUnless required by applicable law or agreed
        to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF
        ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the
        License.</string>


    <string-array name="spinner_recurrence_options">
        <item>None</item>
        <item>Installment</item>
        <item>Fixed monthly</item>
    </string-array>

    <string-array name="spinner_type_options">
        <item>Not necessary</item>
        <item>Necessary</item>
        <item>Investment</item>
    </string-array>

    <string-array name="months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="every_month_array">
        <item>01 month</item>
        <item>02 months</item>
        <item>03 months</item>
        <item>04 months</item>
        <item>05 months</item>
        <item>06 months</item>
        <item>07 months</item>
        <item>08 months</item>
        <item>09 months</item>
        <item>10 months</item>
        <item>11 months</item>
        <item>12 months</item>
    </string-array>

    <string-array name="month_abbreviations">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Okt</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

</resources>