<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_lbl_license_MPAndroidChart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/label_options_text_size"
            android:textColor="@color/color_labels_black"
            android:text="@string/lbl_mp_android_chart"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/tv_txt_license_MPAndroidChart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright_mp_android_chart"/>

        <TextView
            android:id="@+id/tv_lbl_license_currency_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/label_options_text_size"
            android:textColor="@color/color_labels_black"
            android:text="@string/lbl_currency_edittext"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/tv_txt_license_currency_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright_corrency_edittext"/>

        <TextView
            android:id="@+id/tv_lbl_license_color_picker_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/label_options_text_size"
            android:textColor="@color/color_labels_black"
            android:text="@string/lbl_color_picker_view"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/tv_txt_license_color_picker_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright_color_picker_view"/>

    </LinearLayout>

</ScrollView>